--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,8 @@ edition = "2021"
 [dependencies]
 blake3 = { version = "1.5.0", features = ["serde", "mmap"] }
 clap = { version = "4.4.10", features = ["derive"] }
-derive_more = "0.99.17"
 eyre = "0.6.9"
-lexpr = "0.2.7"
 ron = "0.8.1"
-# indexmap = { version = "2.1.0", features = ["serde"] }
 serde = { version = "1.0.193", features = ["derive", "rc"] }
-serde_json = "1.0.108"
-slotmap = "1.0.7"
-thiserror = "1.0.50"
+# thiserror = "1.0.50"
 walkdir = "2.4.0"
