--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0.193", features = ["derive", "rc"] }
 walkdir = "2.4.0"
 serde_json = "1.0"
 strum = { version = "0.25.0", features = ["derive"] }
-slotmap = { version = "1.0.7", features = ["serde"] }
+# slotmap = { version = "1.0.7", features = ["serde"] }
 # self_cell = "1.0.3"
 
 [dev-dependencies]
