--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,15 @@ edition = "2021"
 blake3 = { version = "1.5.0", features = ["serde", "mmap"] }
 clap = { version = "4.4.10", features = ["derive", "unstable-doc"] }
 eyre = "0.6.9"
-# ron = "0.8.1"
 serde = { version = "1.0.193", features = ["derive", "rc"] }
-# thiserror = "1.0.50"
 walkdir = "2.4.0"
 serde_json = "1.0"
 strum = { version = "0.25.0", features = ["derive"] }
-# slotmap = { version = "1.0.7", features = ["serde"] }
-# self_cell = "1.0.3"
+
+fieldmap = { path = "../fieldmap", features = ["serde"] }
+derive_more = "0.99.17"
+pathdiff = "0.2.1"
+path-absolutize = "3.1.1"
 
 [dev-dependencies]
 mktemp = "0.5.1"
