--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ derive_more = "0.99.17"
 pathdiff = "0.2.1"
 path-absolutize = "3.1.1"
 thiserror = "1.0.57"
+inotify = { version = "0.10.2", default-features = false }
 
 [dev-dependencies]
 mktemp = "0.5.1"
